Fix text alignment

--- a/src/Return.Web/_scss/_common.scss
+++ b/src/Return.Web/_scss/_common.scss
@@ -41,3 +41,7 @@ p {
         margin-left: 4em;
     }
 }
+
+.has-text-centered {
+    text-align: center;
+}
